--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.31'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -29,6 +29,12 @@ ext {
 //    firebase_database_version = "16.0.5"
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
+    android_components_version = '20a73a483e'
+    coroutines_version = '1.2.1'
+    firebase_database_version = "16.1.0"
+    firebase_auth_version = "16.2.0"
+    androidx_lifecycle = "2.1.0-beta01"
+    rxkotlin_version = '2.3.0'
 }
 
 task clean(type: Delete) {
