--- a/realtimeadapter/build.gradle
+++ b/realtimeadapter/build.gradle
@@ -43,23 +43,21 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def androidComponents = '1ad02870df'
-    implementation "com.github.hoopit.android-components:common:$androidComponents"
-    api "com.github.hoopit.android-components:firebase-realtime:$androidComponents"
+    implementation "com.github.hoopit.android-components:common:$android_components_version"
+    api "com.github.hoopit.android-components:firebase-realtime:$android_components_version"
 
     // The latest versions aren't used because of Firebase UI - see: https://github.com/firebase/FirebaseUI-Android/releases
 //    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
-    api "com.google.firebase:firebase-database:16.1.0"
-    api "com.google.firebase:firebase-auth:16.2.0"
+    api "com.google.firebase:firebase-database:$firebase_database_version"
+    api "com.google.firebase:firebase-auth:$firebase_auth_version"
 
     implementation "com.jakewharton.timber:timber:$timber_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
-    implementation 'androidx.lifecycle:lifecycle-reactivestreams-ktx:2.0.0'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
 
-//    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
