--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.40'
     repositories {
         google()
         jcenter()
@@ -29,13 +29,12 @@ ext {
 //    firebase_database_version = "16.0.5"
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
-    android_components_version = '4c0ec357e6'
-    coroutines_version = '1.2.1'
-    firebase_database_version = "16.1.0"
-    firebase_auth_version = "16.2.0"
-    androidx_lifecycle = "2.1.0-beta01"
+    android_components_version = 'eb31fa1fdf'
+    coroutines_version = '1.2.2'
+    firebase_database_version = "18.0.0"
+    firebase_auth_version = "18.0.0"
     rxkotlin_version = '2.3.0'
-    lifecycle_version = '2.0.0'
+    lifecycle_version = '2.1.0-beta01'
 }
 
 task clean(type: Delete) {
