--- a/realtimeadapter/build.gradle
+++ b/realtimeadapter/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     // The latest versions aren't used because of Firebase UI - see: https://github.com/firebase/FirebaseUI-Android/releases
 //    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
     implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
-    implementation "com.google.firebase:firebase-database"
-    implementation "com.google.firebase:firebase-auth"
+    api "com.google.firebase:firebase-database"
+    api "com.google.firebase:firebase-auth"
 
     implementation "com.jakewharton.timber:timber:$timber_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
