--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
@@ -27,10 +27,10 @@ allprojects {
 ext {
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
-    android_components_version = 'eb31fa1fdf'
+    android_components_version = 'afea75356d'
     coroutines_version = '1.2.2'
     rxkotlin_version = '2.3.0'
-    lifecycle_version = '2.1.0-beta01'
+    lifecycle_version = '2.1.0-rc01'
     firebase_bom_version = '20.1.0'
 }
 
