Add function to retrieve number of unread threads
Retrieve last message by fetching the latest message, instead of
relying on the lastMessage property.

Bump compileSdkVersion and targetSdkVersion to 29
Set jvmTarget to 1.8 for kotlin

--- a/realtimeadapter/build.gradle
+++ b/realtimeadapter/build.gradle
@@ -19,10 +19,10 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -40,6 +40,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
