--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
@@ -28,10 +28,10 @@ ext {
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
     android_components_version = 'afea75356d'
-    coroutines_version = '1.2.2'
-    rxkotlin_version = '2.3.0'
-    lifecycle_version = '2.1.0-rc01'
-    firebase_bom_version = '20.1.0'
+    coroutines_version = '1.3.0-RC2'
+    rxkotlin_version = '2.4.0'
+    lifecycle_version = '2.2.0-alpha03'
+    firebase_bom_version = '22.0.0'
 }
 
 task clean(type: Delete) {
