--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,7 +27,7 @@ allprojects {
 ext {
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
-    android_components_version = 'afea75356d'
+    android_components_version = 'fb6cdd0ec00756bef3ee9370917865e5f4d54088'
     coroutines_version = '1.3.0-RC2'
     rxkotlin_version = '2.4.0'
     lifecycle_version = '2.2.0-alpha03'
