--- a/realtimeadapter/build.gradle
+++ b/realtimeadapter/build.gradle
@@ -26,9 +26,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-//        configurations.all { t ->
-//            substituteWithLocal.call(t, "com.github.hoopit.android-components", null)
-//        }
+        configurations.all { t ->
+            substituteWithLocal.call(t, "com.github.hoopit.android-components", null)
+        }
     }
 
     buildTypes {
