--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,11 +27,11 @@ allprojects {
 ext {
     maven_gradle_version = "2.1"
     timber_version = "4.7.1"
-    android_components_version = '51e3555870'
-    coroutines_version = '1.3.0-RC2'
+    android_components_version = 'b65a43adc4'
+    coroutines_version = '1.3.0'
     rxkotlin_version = '2.4.0'
-    lifecycle_version = '2.2.0-alpha04'
-    firebase_bom_version = '22.0.0'
+    lifecycle_version = '2.2.0-rc01'
+    firebase_bom_version = '24.0.0'
 }
 
 task clean(type: Delete) {
